# OpenVINO-Benchmark-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dev-env.Dockerfile  prepare_data_and_model.py  run_decode.cpp  run_infer.cpp  set_win_env.py  vcpkg.json
.github/workflows/: docker-image.yml
app/: CMakeLists.txt  run_decode.cpp  run_infer.cpp
infer/: ConcurrentQueue.hpp  common.cpp  common.hpp  multi_infer.cpp  multi_infer.hpp  one_decode_multi_infer.cpp  one_decode_multi_infer.hpp  sync_infer.cpp  sync_infer.hpp
opencv_benchmark/: async_decode.cpp  sync_decode.cpp
src/: CMakeLists.txt  common.cpp  common.hpp  multi_infer.cpp  multi_infer.hpp  one_decode_multi_infer.cpp  one_decode_multi_infer.hpp  sync_infer.cpp  sync_infer.hpp
